--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@
       <input type="hidden" name="sid1" value="ads">
       <input type="hidden" name="sid2" value="vova">
       <input type="hidden" name="sid3" value="vova">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://suganorm-official.github.io/Hungary/success/index.html">
                 </form>
                 <div class="note" id="note-popform"></div>
               </div>
@@ -353,7 +353,7 @@
       <input type="hidden" name="sid1" value="ads">
       <input type="hidden" name="sid2" value="vova">
       <input type="hidden" name="sid3" value="vova">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://suganorm-official.github.io/Hungary/success/index.html">
                 </form>
                 <div class="note" id="note-popform"></div>
               </div>
@@ -566,7 +566,7 @@
       <input type="hidden" name="sid1" value="ads">
       <input type="hidden" name="sid2" value="vova">
       <input type="hidden" name="sid3" value="vova">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://suganorm-official.github.io/Hungary/success/index.html">
                 </form>
                 <div class="note" id="note-popform"></div>
               </div>
@@ -605,7 +605,7 @@
       <input type="hidden" name="sid1" value="ads">
       <input type="hidden" name="sid2" value="vova">
       <input type="hidden" name="sid3" value="vova">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://suganorm-official.github.io/Hungary/success/index.html">
       </form>
       <div class="note" id="note-popform"></div>
     </div>
@@ -657,7 +657,7 @@
       <input type="hidden" name="sid1" value="ads">
       <input type="hidden" name="sid2" value="vova">
       <input type="hidden" name="sid3" value="vova">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://suganorm-official.github.io/Hungary/success/index.html">
               </form>
               <div class="note" id="note-popform"></div>
             </div>
@@ -718,7 +718,7 @@
       <input type="hidden" name="sid1" value="ads">
       <input type="hidden" name="sid2" value="vova">
       <input type="hidden" name="sid3" value="vova">
-      <input type="hidden" name="redirect_url" value="https://amazinghealth.github.io/germitox-ita/success/index.html">
+      <input type="hidden" name="redirect_url" value="https://suganorm-official.github.io/Hungary/success/index.html">
                 </form>
                 <div class="note" id="note-popform"></div>
               </div>
